# flask-oauth-serverless-poc

./: .gitignore  README.md  app.py  db.py  pyproject.toml  requirements.txt
.chalice/: config.json  policy-dev.json
.chalice/deployed/: dev.json
app/: models.py  settings.py
chalicelib/: auth.py
commands/: users.py
