[tool.poetry]
name = "flask-oauth-serverless-poc"
version = "0.1.0"
description = "PoC of serverless flask oauth authorization/resource provider app"
authors = ["Seonghyeon Kim <self@seonghyeon.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
authlib = "^0.14.3"
pynamodb = "^4.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
